overall proof check 1

--- a/about-us.html
+++ b/about-us.html
@@ -39,7 +39,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -49,7 +49,7 @@
                         <ul>
                            <li class="login-btn">
                               <span>
-                                 <a href="contact" class="ds-a">Book Appoinment</a>
+                                 <a href="book-appointment" class="ds-a">Book Appoinment</a>
                               </span>
                            </li>
                         </ul>
@@ -159,8 +159,8 @@
                   <li><a href="contact" class="ds-a">contact us</a></li>
                   <li class="border-none">
                      <ul class="social-icon">
-                        <li><a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="www.instagram.com"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA=="><i class="fab fa-instagram"></i></a></li>
                      </ul>
                   </li>
                </ul>
@@ -178,7 +178,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                  <div class="sb-contact-section">
                     <nav aria-label="breadcrumb">
-                        <h4 class="sb-sub-h4 wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON BEHIND YOUR SMILE.</h4>
+                        <h4 class="sb-sub-h4 wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON <br> BEHIND YOUR SMILE.</h4>
                         <!-- <h2 class="sb-sub-h2 wow fadeIn" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON BEHIND YOUR SMILE. </h2> -->
                     </nav>
                  </div>
@@ -253,7 +253,7 @@
         <div class="row ab-row4">
             <div class="col-lg-6 main-ab4-1">
                 <h2 class="ab-4s-1"> <span>YOUR DENTAL HEALTH </span> <br>OUR PRIORITY</h2>
-                <p class="ab-4s-2 ds-a px-2  ">Everyone who enters our doors will benefit from improved oral health and general wellbeing. 
+                <p class="ab-4s-2 ds-a px-2 pb-5">Everyone who enters our doors will benefit from improved oral health and general wellbeing. 
                   We are here to assist you because we believe in the power of a radiant, healthy smile. Whether you need simple 
                   restoration procedures or more involved preventative care, our knowledgeable dentists and staff have the skills, 
                   experience, and cutting-edge equipment to produce excellent outcomes. </p>
@@ -316,8 +316,8 @@
                         <ul>
                            <li>
                               <ul class="footer-media">
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-instagram"></i></a></li>
+                                 <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
+                                 <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA==" class="ds-a"><i class="fab fa-instagram"></i></a></li>
                               </ul>
                            </li>
                         </ul>
