--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -154,15 +154,15 @@
             <div id="toggle_close">&times;</div>
             <div id='cssmenu'>
                <ul class="float_left">
-                  <li><a href="home" class="ds-a">Home 1</a></li>
+                  <li><a href="home" class="ds-a">home</a></li>
                   <li><a href="about" class="ds-a">about</a></li>
                   <li><a href="services" class="ds-a">Services</a></li>
                   <li><a href="faqs" class="ds-a">Faqs</a></li>
                   <li><a href="contact" class="ds-a">contact us</a></li>
                   <li class="border-none">
                      <ul class="social-icon">
-                        <li><a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="www.instagram.com"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA=="><i class="fab fa-instagram"></i></a></li>
                      </ul>
                   </li>
                </ul>
@@ -241,7 +241,7 @@
          <div class="row plr-50">
             <div class="col-lg-6 col-md-12">
                <div class="image-section ps-rel ">
-                  <img src="assets/images/pexels-cottonbro-studio-6502555.jpg" class="image-section-au" alt="img">
+                  <img src="assets/images/dental-stories-about-us-sec-1.png" class="image-section-au" alt="img">
                </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12">
@@ -414,62 +414,25 @@
    <!-- gallery section start  -->
    <section class="gallery-sec">
       <h6 class="home1-section-heading1">Gallery</h6>
-      <h5 class="home1-section-heading2 ds-a">WE BELIEVE EVERY STORY STARTS WITH A SMILE</h5>
       <!-- <p class="ds-a"> Experience Top-notch Dentistry at Our Clinic </p> -->
       <div class="gallery-image">
         <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-1.jpg" alt="" />
-          <div class="transparent-box">
-            <div class="caption">
-              <p>Library</p>
-              <!-- <p class="opacity-low">Architect Design</p> -->
-            </div>
-          </div> 
         </div>
         <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-2.jpg" alt="" />
-          <div class="transparent-box">
-            <div class="caption">
-              <p>Night Sky</p>
-              <!-- <p class="opacity-low">Cinematic</p> -->
-            </div>
-          </div>
         </div>
         <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-3.jpg" alt="" />
-          <div class="transparent-box">
-            <div class="caption">
-              <p>Tea Talk</p>
-              <!-- <p class="opacity-low">Composite</p> -->
-            </div>
-          </div>
         </div>
         <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-4.jpg" alt="" />
-          <div class="transparent-box">
-            <div class="caption">
-              <p>Road</p>
-              <!-- <p class="opacity-low">Landscape</p> -->
-            </div>
-          </div> 
         </div>
         <div class="img-box">
          <img src="assets/images/dental-stories-gallery-image-5.jpg" alt="" />
-         <div class="transparent-box">
-           <div class="caption">
-             <p>Tea Talk</p>
-             <!-- <p class="opacity-low">Composite</p> -->
-           </div>
-         </div>
        </div>
         <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-6.jpg" alt="" />
-          <div class="transparent-box">
-            <div class="caption">
-              <p>Vintage</p>
-              <!-- <p class="opacity-low">Cinematic</p> -->
-            </div>
-          </div> 
+          <img src="assets/images/dental-stories-gallery-image-6.jpg" alt="" /> 
         </div>
       </div>
    </section>
@@ -568,8 +531,8 @@
                         <ul>
                            <li>
                               <ul class="footer-media">
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-instagram"></i></a></li>
+                                 <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
+                                 <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA==" class="ds-a"><i class="fab fa-instagram"></i></a></li>
                               </ul>
                            </li>
                         </ul>
