--- a/book-appointment.html
+++ b/book-appointment.html
@@ -41,20 +41,9 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-lg-6 col-md-6 col-sm-6 col-5 p-0">
-                     <div class="sb-top-right-section">
-                        <ul>
-                           <li class="login-btn">
-                              <span>
-                                 <a href="contact" class="ds-a">Book Appoinment</a>
-                              </span>
-                           </li>
-                        </ul>
                      </div>
                   </div>
                </div>
@@ -154,15 +143,15 @@
             <div id="toggle_close">&times;</div>
             <div id='cssmenu'>
                <ul class="float_left">
-                  <li><a href="home" class="ds-a">Home 1</a></li>
+                  <li><a href="home" class="ds-a">home</a></li>
                   <li><a href="about" class="ds-a">about</a></li>
                   <li><a href="services" class="ds-a">Services</a></li>
                   <li><a href="faqs" class="ds-a">Faqs</a></li>
                   <li><a href="contact" class="ds-a">contact us</a></li>
                   <li class="border-none">
                      <ul class="social-icon">
-                        <li><a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="www.instagram.com"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA=="><i class="fab fa-instagram"></i></a></li>
                      </ul>
                   </li>
                </ul>
@@ -174,8 +163,8 @@
 
 
 
-   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScyPtOw9q6M1NYUwiLsB2hYNa8c0yvuxS7szHOBVXDbnkcAOA/viewform?embedded=true" 
-   width="1500" height="1423" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc1fdfuLfL0BdJ2V0IOnzk3pbKb5udHTQAc-t4c8OpKOoM3Yw/viewform?embedded=true" 
+   width="1600" height="2232" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
 
