--- a/contact-us.html
+++ b/contact-us.html
@@ -40,7 +40,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -50,7 +50,7 @@
                         <ul>
                            <li class="login-btn">
                               <span>
-                                 <a href="contact" class="ds-a">Book Appoinment</a>
+                                 <a href="book-appointment" class="ds-a">Book Appoinment</a>
                               </span>
                            </li>
                         </ul>
@@ -160,8 +160,8 @@
                   <li><a href="contact" class="ds-a">contact us</a></li>
                   <li class="border-none">
                      <ul class="social-icon">
-                        <li><a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="www.instagram.com"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA=="><i class="fab fa-instagram"></i></a></li>
                      </ul>
                   </li>
                </ul>
@@ -282,8 +282,8 @@
                         <ul>
                            <li>
                               <ul class="footer-media">
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
-                                 <li><a href="javascript:;" class="ds-a"><i class="fab fa-instagram"></i></a></li>
+                                 <li><a href="https://www.facebook.com/profile.php?id=61550994149266&mibextid=nW3QTL" class="ds-a"><i class="fab fa-facebook-f"></i></a></li>
+                                 <li><a href="https://instagram.com/dental.stories_ds?igshid=MzRlODBiNWFlZA==" class="ds-a"><i class="fab fa-instagram"></i></a></li>
                               </ul>
                            </li>
                         </ul>
