Change in contact and index check proof check 2

--- a/contact-us.html
+++ b/contact-us.html
@@ -182,7 +182,7 @@
                      <div class="mcs-head-sec">
                         <h2 class="mc-cu-h2 pb-4">START YOUR STORY WITH A SMILE</h2>
                         <p class="mc-cu-p ds-a">Feel free to get in touch with us. We would love to help you with all your dental concerns.</p>
-                        <h3 class="mc-cu-h3 ds-a pt-3">MAKE AN APPOINTMENT</h3>
+                        <!-- <h3 class="mc-cu-h3 ds-a pt-3">MAKE AN APPOINTMENT</h3> -->
                         <form action="#" class="si-cu-form">
                            <div class="mb-3 form-row">
                               <div class="input-data">
@@ -202,11 +202,11 @@
                                  <div class="underline"></div>
                                  <label for="">Email Address</label>
                               </div>
-                              <div class="input-data">
+                              <!-- <div class="input-data">
                                  <input type="date" required>
                                  <div class="underline"></div>
                                  <label for="">Appoinment Date</label>
-                              </div>
+                              </div> -->
                            </div>
                            <div class="mb-3 form-row">
                            <div class="input-data textarea">
@@ -230,7 +230,7 @@
             </div>
             <div class="col-lg-6 mcs-2">
                <div class="mcs-loc-pin">
-                  <iframe class="cu-loc-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15072.805694739758!2d72.8493645!3d19.1864028!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b7b6a130ea93%3A0x74cb6e62a65ce381!2sMagic%20Square!5e0!3m2!1sen!2sin!4v1689512024300!5m2!1sen!2sin" 
+                  <iframe class="cu-loc-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.068129567811!2d72.83451107520608!3d19.104666882105835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9a72713a289%3A0xcf70f52e72369fdb!2sDental%20Stories!5e0!3m2!1sen!2sin!4v1694597043598!5m2!1sen!2sin" 
                   width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                </div>
                <hr class="mcs-sep">
