--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   </a>
                   <!-- <h4 class="ds-a text-white">Everything starts with a smile</h4> -->
                   <!-- <h2 class="wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">Let’s take care of it. </h2> -->
-                  <a href="contact">
+                  <a href="book-appointment">
                      <button  class="button-btn mt-4 ds-a">Make an appointment
                         <span><i class="fas fa-angle-double-right"></i></span>
                      </button>
@@ -443,68 +443,12 @@
    <div class="Site-inner">
       <div class="cont-outer">
          <div class="main-contact-sec">
-            <div class="container">
-               <div class="row sq-row">
-                  <div class="col-lg-6 af-1">
-                     <div class="mcs-head-sec">
-                        <h3 class="mc-cu-h3">BOOK AN APPOINTMENT</h3>
-                        <form action="#" class="raa-form">
-                           <div class="mb-3 form-row">
-                              <div class="input-data">
-                                 <input type="text" required>
-                                 <div class="underline"></div>
-                                 <label for="">First Name</label>
-                              </div>
-                              <div class="input-data">
-                                 <input type="text" required>
-                                 <div class="underline"></div>
-                                 <label for="">Last Name</label>
-                              </div>
-                           </div>
-                           <div class="mb-3 form-row">
-                              <div class="input-data">
-                                 <input type="text" required>
-                                 <div class="underline"></div>
-                                 <label for="">Email Address</label>
-                              </div>
-                              <div class="input-data">
-                                 <input type="date" required>
-                                 <div class="underline"></div>
-                                 <label for="">Appoinment Date</label>
-                              </div>
-                           </div>
-                           <div class="mb-3 form-row">
-                           <div class="input-data textarea">
-                              <textarea rows="8" cols="80" required></textarea>
-                              <br />
-                              <div class="underline"></div>
-                              <label for="">Write your message</label>
-                              <br />
-                              <button href="contact" class="button-btn">SAY YES TO HEALTHY SMILE
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
-                        </form>
-                     </div>
-                  </div>
-               </div>
-            </div>
             <div class="col-lg-6 af-2">
                <div class="container ds-cd-sec">
                   <div class="mcs-details">
-                     <!-- <h3 class="details-h3">CONTACT INFO</h3>
-                     <p class="ds-a">Dental Stories</p>
-                     <p class="ds-a">600 Broadway, Suite 330 <br>
-                        Seattle, WA, 98122</p>
-                     <p class="pt-2 ds-a"> 
-                        <a class="numlink" href="tel:+91-8448449833"> <strong>Call:  +91-8448449833</strong>               
-                        </a>
-                     </p>
-                     <p class="pt-3 ds-a">
-                        <a href="mailto:test@dentalstories.com"><strong>Email:  test@dentalstories.com</strong></a>
-                     </p> -->
                      <iframe class="cu-loc-iframe"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.068129567811!2d72.83451107520608!3d19.104666882105835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9a72713a289%3A0xcf70f52e72369fdb!2sDental%20Stories!5e0!3m2!1sen!2sin!4v1694597043598!5m2!1sen!2sin"
-                        width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
