Dental Changes 180923 proof check 2

--- a/about-us.html
+++ b/about-us.html
@@ -178,7 +178,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                  <div class="sb-contact-section">
                     <nav aria-label="breadcrumb">
-                        <h4 class="sb-sub-h4 wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON <br> BEHIND YOUR SMILE.</h4>
+                        <h4 class="sb-sub-h4 wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">We would love to be the reason <br> behind your smile.</h4>
                         <!-- <h2 class="sb-sub-h2 wow fadeIn" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON BEHIND YOUR SMILE. </h2> -->
                     </nav>
                  </div>
@@ -191,7 +191,7 @@
 
 
 
-     <div class="ab-2s">
+     <!-- <div class="ab-2s">
         <div class="container">
             <h4 class="ab-cont-h4">Wide range of services ensures that you get the best for your oral health</h4>
             <div class="row ab-row1">
@@ -213,7 +213,7 @@
             </div>
         </div>
 
-     </div>
+     </div> -->
 
 
 <div class="ab-3s">
@@ -223,7 +223,7 @@
 
             </div>
             <div class="col-lg-6 maincol2 ab1">
-                <h2 class="ab-th1">TEAM OF DENTAL PROFESSIONALS WHO REALLY CARE ABOUT YOUR SMILE.</h2>
+                <h2 class="ab-th1">Team of dental professionals who really care about your smile</h2>
                 <p class="ab-th2 ds-a">We have always noticed that people don’t visit the dentist unless they “really have to”. We, being students 
                   of science, observed what lack of care and ignorance can do to oral health. Thus, we started Dental Stories with the aim of 
                   educating and providing services for oral health. We believe each one of us has stories, and we just want you to tell your stories
@@ -252,7 +252,7 @@
     <div class="container">
         <div class="row ab-row4">
             <div class="col-lg-6 main-ab4-1">
-                <h2 class="ab-4s-1"> <span>YOUR DENTAL HEALTH </span> <br>OUR PRIORITY</h2>
+                <h2 class="ab-4s-1"> <span>Your dental health </span> <br>Our priority</h2>
                 <p class="ab-4s-2 ds-a px-2 pb-5">Everyone who enters our doors will benefit from improved oral health and general wellbeing. 
                   We are here to assist you because we believe in the power of a radiant, healthy smile. Whether you need simple 
                   restoration procedures or more involved preventative care, our knowledgeable dentists and staff have the skills, 
@@ -344,13 +344,13 @@
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
-                     Vile Parle (West) Mumbai 400056t</a>
+                     Vile Parle (West) Mumbai 400056</a>
                      </li>
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
-                        drpoonamsarda@gmail.com</a>
+                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                        jenish.endo@gmail.com</a>
                      </li>
                   </ul>
                </div>
@@ -370,10 +370,10 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="ds-a">© Copyright 2022 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
+                  <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
                </div>
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a">Private Policy | Terms and Conditions.</p>
+                  <p class="last-para ds-a">Privacy Policy</p>
                </div>
             </div>
          </div>
