--- a/faq.html
+++ b/faq.html
@@ -184,28 +184,28 @@
         <div class="accordion-booking">
             <div class="c">
                <input type="checkbox" id="faq-1" class="faq-input">
-               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-1">How can I book an appointment?</label></h1>
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-1">How can I book an appointment ?</label></h1>
                <div class="p">
                   <p>You can easily book an appointment by calling our office or using our online booking system on our website. We're here to accommodate your schedule.</p>
                </div>
             </div>
             <div class="c">
                <input type="checkbox" id="faq-2" class="faq-input">
-               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-2">How can I reschedule my appointment?</label></h1>
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-2">How can I reschedule my appointment ?</label></h1>
                <div class="p">
                   <p>To reschedule your appointment, please give us a call at 9820929308 at least 24 hours in advance. We'll be happy to find a new convenient time for you.</p>
                </div>
             </div>
             <div class="c">
                <input type="checkbox" id="faq-3" class="faq-input">
-               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-3">Are dental X-rays safe?</label></h1>
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-3"> What are early signs of dental trouble ?</label></h1>
                <div class="p">
-                  <p>Dental X-rays are generally considered safe with minimal exposure to radiation. Dentists take precautions to minimize radiation exposure by using lead aprons and thyroid collars. Additionally, the frequency and type of X-rays recommended will depend on your oral health needs. Your dentist will take into account factors such as your age, dental history, and current oral health condition when determining the necessity of X-rays.</p>
+                  <p>Early signs of dental trouble can include tooth sensitivity, bleeding gums, persistent bad breath, and toothaches. Regular dental check-ups help detect and address these issues early.</p>
                </div>
             </div>
             <div class="c">
                <input type="checkbox" id="faq-4" class="faq-input">
-               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-4">What services do you offer?</label></h1>
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-4">What services do you offer ?</label></h1>
                <div class="p">
                   <p>We provide a wide range of dental services, including preventive care, teeth cleanings, fillings, crowns, bridges, root canals, orthodontics, and more. Visit 
                      our "Services" page for a complete list.</p>
@@ -213,10 +213,17 @@
             </div>
             <div class="c">
                <input type="checkbox" id="faq-5" class="faq-input">
-               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-5">What if I miss my appointment?</label></h1>
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-5">What if I miss my appointment ?</label></h1>
                <div class="p">
                   <p>If you need to cancel or reschedule, please contact us at least 24 hours before your appointment. For missed appointments, there may be a fee. We value your 
                      time, and we appreciate your understanding.</p>
+               </div>
+            </div>
+            <div class="c">
+               <input type="checkbox" id="faq-6" class="faq-input">
+               <h1 class="faq-accordion-h1"><label class="faq-l" for="faq-6">What is a root canal ?</label></h1>
+               <div class="p">
+                  <p>A root canal is a dental procedure that treats infected or damaged tooth pulp. During the procedure, the dentist removes the infected tissue, cleans the tooth's interior, and seals it to prevent further infection. It's often necessary to save a severely decayed or damaged tooth. </p>
                </div>
             </div>
         </div>
@@ -266,13 +273,13 @@
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
-                     Vile Parle (West) Mumbai 400056t</a>
+                     Vile Parle (West) Mumbai 400056</a>
                      </li>
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
-                        drpoonamsarda@gmail.com</a>
+                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                        jenish.endo@gmail.com</a>
                      </li>
                   </ul>
                </div>
@@ -292,10 +299,10 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="ds-a">© Copyright 2022 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
+                  <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
                </div>
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a">Private Policy | Terms and Conditions.</p>
+                  <p class="last-para ds-a">Privacy Policy</p>
                </div>
             </div>
          </div>
