--- a/service.html
+++ b/service.html
@@ -302,13 +302,13 @@
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
-                     Vile Parle (West) Mumbai 400056t</a>
+                     Vile Parle (West) Mumbai 400056</a>
                      </li>
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
-                        drpoonamsarda@gmail.com</a>
+                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                        jenish.endo@gmail.com</a>
                      </li>
                   </ul>
                </div>
@@ -328,10 +328,10 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="ds-a">© Copyright 2022 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
+                  <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
                </div>
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a">Private Policy | Terms and Conditions.</p>
+                  <p class="last-para ds-a">Privacy Policy</p>
                </div>
             </div>
          </div>
