--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                <div class="about-content ">
                   <h6 class="home1-section-heading1 text-start">About Us</h6>
-                  <h4>WE BELIEVE EVERY STORY STARTS WITH A SMILE</h4>
+                  <h4>We believe every story starts with a smile</h4>
                   <p class="py-3 ds-p">Dental Stories is a Dental Clinic owned by Dr. Jenish Parmar and Dr. Poonam Sarda, both specializing in Conservative Dentistry 
                      and Endodontics. We do our small part of taking care of your oral health so that you can share your stories with a bright smile.</p>
                   <p class="py-2 ds-p">We are a team of dedicated dental professionals committed to providing exceptional oral healthcare services to our patients. With 
@@ -377,7 +377,9 @@
                   </p>
                   <div class="content">
                      <span><i class="fas fa-phone"></i></span>
-                     <h4>+91 9957842478</h4>
+                     <a href="tel:+91-9820929308" class="cta-a">
+                        +91 9820929308
+                     </a>
                   </div>
                   <!-- <img src="images/emergency2.png " class="d-none d-md-block d-lg-block d-xl-block" alt="img"> -->
                </div>
@@ -416,9 +418,9 @@
       <h6 class="home1-section-heading1">Gallery</h6>
       <!-- <p class="ds-a"> Experience Top-notch Dentistry at Our Clinic </p> -->
       <div class="gallery-image">
-        <div class="img-box">
+        <!-- <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-1.jpg" alt="" />
-        </div>
+        </div> -->
         <div class="img-box">
           <img src="assets/images/dental-stories-gallery-image-2.jpg" alt="" />
         </div>
@@ -443,12 +445,12 @@
    <div class="Site-inner">
       <div class="cont-outer">
          <div class="main-contact-sec">
-            <div class="col-lg-6 af-2">
+            <div class="col-lg-12 af-2">
                <div class="container ds-cd-sec">
                   <div class="mcs-details">
                      <iframe class="cu-loc-iframe"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.068129567811!2d72.83451107520608!3d19.104666882105835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9a72713a289%3A0xcf70f52e72369fdb!2sDental%20Stories!5e0!3m2!1sen!2sin!4v1694597043598!5m2!1sen!2sin"
-                        width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
@@ -503,13 +505,13 @@
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
-                     Vile Parle (West) Mumbai 400056t</a>
+                     Vile Parle (West) Mumbai 400056</a>
                      </li>
                      <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
-                        drpoonamsarda@gmail.com</a>
+                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                        jenish.endo@gmail.com</a>
                      </li>
                   </ul>
                </div>
@@ -529,10 +531,10 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="ds-a">© Copyright 2022 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
+                  <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
                </div>
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a">Private Policy | Terms and Conditions.</p>
+                  <p class="last-para ds-a">Privacy Policy</p>
                </div>
             </div>
          </div>
