Proof check 3 change in faq and minor change

--- a/about-us.html
+++ b/about-us.html
@@ -76,7 +76,7 @@
                               </a>
                            </li>
                            <li class="border-none pe-0">
-                              <a href="contact"><i class="fas fa-map-marker-alt"></i></a>
+                              <a href="contact"><i class="fas fa-clock-o"></i></a>
                               <a href="contact" class="ds-a">Monday - Saturday<br>
                               10 AM - 2 PM ; 5 PM - 9 PM</a>
                            </li>
