Changes for tab view

--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,7 @@
 <body>
    <div id="preloader">
       <div id="status">
-         <img src="images/dentalstories-preloader.gif" id="preloader_image" alt="loader">
+         <img src="assets/images/dental_stories_logo_ani.gif" id="preloader_image" alt="loader">
       </div>
    </div>
    <!-- top to return -->
@@ -215,14 +215,11 @@
                               <div class="underline"></div>
                               <label for="">Write your message</label>
                               <br />
-                              <a href="contact">
-                                 <button class="button-btn mt-4">book now
+                              <a href="#">
+                                 <button class="button-btn mt-0">book now
                                     <span><i class="fas fa-angle-double-right"></i></span>
                                  </button>
                               </a>
-                              <!-- <a href="contact" class="button-btn">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </a> -->
                         </form>
                      </div>
                   </div>
