--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
    <div id="preloader">
       <div id="status">
-         <img src="images/dentalstories-preloader.gif" id="preloader_image" alt="loader">
+         <img src="assets/images/DS-logo-ani-1.gif" id="preloader_image" alt="loader">
       </div>
    </div>
    <!-- top to return -->
@@ -177,7 +177,7 @@
    <div class="banner-section-wrapper float_left">
       <div class="container">
          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+            <div class="col-lg-6 col-md-12  col-sm-12 col-12">
                <div class="sb-banner-section ds-home-banner">
                   <a href="home">
                      <img src="assets/images/Dental_stories_logo_ps_2_2.png" class="ds-m-logo banner-logo" alt="img">
@@ -197,7 +197,7 @@
    <!-- banner section end-->
 
    <!-- About section start-->
-   <div class="about-main-wrapper float_left">
+   <!-- <div class="about-main-wrapper float_left">
       <div class="container">
          <div class="row plr-50">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -206,7 +206,6 @@
                   </div>
                   <div class="content">
                      <h5 class="ds-a">Experienced Dental Professionals.</h5>
-                     <!-- <p>Dental Professionals.</p> -->
                   </div>
                </div>
             </div>
@@ -216,7 +215,6 @@
                   </div>
                   <div class="content">
                      <h5 class="ds-a">Prioritizing oral health.</h5>
-                     <!-- <p>is important.</p> -->
                   </div>
                </div>
             </div>
@@ -226,13 +224,11 @@
                   </div>
                   <div class="content">
                      <h5 class="ds-a">For stories that end with a smile.</h5>
-                     <!-- <p>Lorem ipsum dolor sit amet</p> -->
-                  </div>
                </div>
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
    <!-- About us section end -->
    
    <!-- image about section start-->
@@ -414,7 +410,7 @@
    <!-- emergency section end -->
 
    <!-- gallery section start  -->
-   <section class="gallery-sec">
+   <div class="gallery-sec">
       <h6 class="home1-section-heading1">Gallery</h6>
       <!-- <p class="ds-a"> Experience Top-notch Dentistry at Our Clinic </p> -->
       <div class="gallery-image">
@@ -437,7 +433,7 @@
           <img src="assets/images/dental-stories-gallery-image-6.jpg" alt="" /> 
         </div>
       </div>
-   </section>
+   </div>
    <!-- gallery section end  -->
 
 
