--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
 <body>
    <div id="preloader">
       <div id="status">
-         <img src="images/dentalstories-preloader.gif" id="preloader_image" alt="loader">
+         <img src="assets/images/dental_stories_logo_ani.gif" id="preloader_image" alt="loader">
       </div>
    </div>
    <!-- top to return -->
@@ -175,8 +175,8 @@
       <div class="service-heading-sec">
          <h2 class="sh-cont-h2 ds-a">Enhance Your Confidence with Our Comprehensive Dental Solutions</h2>
          <p class="sh-cont-p ds-a">Smiling makes you feel happy, and that is a real benefit. Our specialists' cosmetic dentistry at Dental Stories 
-            may give you a smile that turns heads.<br> Sometimes a few small adjustments may make a huge effect. Other times, you might wish to 
-            take care of several teeth.<br>  Our specialists can chart the road for your perfect smile if you bring us your worries.</p>
+            may give you a smile that turns heads. Sometimes a few small adjustments may make a huge effect. Other times, you might wish to 
+            take care of several teeth.  Our specialists can chart the road for your perfect smile if you bring us your worries.</p>
       </div>
    </div>
 
